# mechanistic-llm-router

./: .coverage  README.md  mechanistic_router_poc.py  pyproject.toml
scripts/: run_poc.py
src/mechanistic_router/: __init__.py  config.py
src/mechanistic_router/core/: encoder.py  router.py
src/mechanistic_router/data/: mock_dataset.py
src/mechanistic_router/models/: pool.py  types.py
src/mechanistic_router/signals/: math_utils.py
src/mechanistic_router/utils/: metrics.py
tests/: test_dataset.py  test_encoder.py  test_metrics.py  test_router.py  test_signals.py
